--- a/src/scss/tobii.scss
+++ b/src/scss/tobii.scss
@@ -233,6 +233,10 @@
   will-change: opacity;
   z-index: 1;
 
+  &:hover {
+    opacity: 1;
+  }
+
   @media screen and (prefers-reduced-motion: no-preference) {
     transition-duration: var(--transition-duration, var(--tobii-transition-duration));
     transition-property: opacity, transform;
